👌 IMPROVE: html content

--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
 
             <div class="row">
                 <input type="text" name="" id="input-box" placeholder="Ajoutez une tache">
-                <button type="submit">Ajouter</button>
+                <button type="submit" onclick="addTask()">Ajouter</button>
             </div>
 
-            <ul id="list-container">
-                <li class="checked">Tache 1</li>
-                <li class="">Tache 2</li>
-            </ul>
+            <ul id="list-container"></ul>
 
         </div>
     </div>
